Sorted gradient logo effect

--- a/bootstrap_theme/vivato/factory_grid.scss
+++ b/bootstrap_theme/vivato/factory_grid.scss
@@ -399,7 +399,6 @@
         }
 
         .pd-grid-card-sm {
-
             @media screen and (max-width: 767px) {
                 margin-bottom: 20px;
             }
@@ -423,6 +422,7 @@
                 padding: 20px;
                 height: 100%;
                 box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+
                 .pd-icon-outer {
                     border: 3px solid #c5247f;
                     width: 60px;
@@ -431,7 +431,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    align-items: center;                    
+                    align-items: center;
 
                     .pd-icon {
                         fill: #c5247f;
@@ -450,6 +450,7 @@
                 p {
                     font-size: 0.9rem;
                 }
+
                 footer {
                     margin-top: auto;
                 }
@@ -458,10 +459,11 @@
                     text-decoration: none;
                     font-weight: 700;
                     color: #c5247f;
-                     &:before {
+
+                    &:before {
                         content: ">";
                         margin-right: 4px;
-                     }
+                    }
                 }
             }
         }
@@ -501,6 +503,7 @@
                 width: 100%;
                 object-fit: cover;
             }
+
             .pd-grid-3-card-overlay {
                 position: absolute;
                 top: 0;
@@ -508,7 +511,6 @@
                 width: 100%;
                 height: 100%;
                 background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.15) 10%, rgba(0, 0, 0, 0.15) 90%, rgba(0, 0, 0, 0.5) 100%);
-
             }
 
             a {
@@ -525,8 +527,6 @@
                     height: 90px;
                 }
             }
-        
-
         }
     }
 
@@ -548,8 +548,6 @@
             height: 40px;
             margin-right: 6px;
             fill: #c5247f;
-
-            
         }
 
         &:hover {
@@ -562,21 +560,17 @@
         }
     }
 }
-// end pd-grid-3
 
+// end pd-grid-3
 // start pd-grid-4
 .pd-grid-4 {
-
     .pd-grid-4-outer {
         @media screen and (max-width: 991px) {
-
         }
 
         @media (min-width: 992px) {
-            
         }
     }
-
 }
 
 // start pd-grid-5
@@ -1091,7 +1085,8 @@
             margin-bottom: 16px;
         }
 
-        img, svg {
+        img,
+        svg {
             margin-right: 4px;
             width: 24px;
             height: 24px;
@@ -1733,6 +1728,100 @@
 }
 
 // end pd-grid-9
+// start pd-grid-10
+.pd-grid-10 {
+    min-height: 400px;
+    position: relative;
+
+    // --pd-grid-10-gradient: radial-gradient(
+    //     circle 800px at 100% 100%, 
+    //     #{$secondary} 5%, 
+    //     #{$info} 55%, 
+    //     #{$primary} 100%
+    // );
+
+    @media screen and (max-width: 575px) {
+        & {
+            --pd-grid-10-gradient: radial-gradient(
+            circle 500px at 100% 100%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    @media (min-width: 576px) {
+        & {
+            --pd-grid-10-gradient: radial-gradient(
+            circle 1000px at 100% 100%, 
+            #{$secondary} 5%, 
+            #{$info} 55%, 
+            #{$primary} 100%
+            );
+        }
+    }
+
+    // set the background on the main element
+    background: var(--pd-grid-10-gradient);
+
+    .pd-logo-gradient-background {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+        background: var(--pd-grid-10-gradient);
+        -webkit-mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-image: url(/images/design-assets/_vivato/logo-vivato-mask.svg);
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+
+        @media screen and (max-width: 575px) {
+            mask-size: 300px 72px;
+            -webkit-mask-size: 300px 72px;
+
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            mask-size: 500px 120px;
+            -webkit-mask-size: 500px 120px;
+
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+
+        @media (min-width: 992px) {
+            mask-size: 600px 144px;
+            -webkit-mask-size: 600px 144px;
+
+            mask-position: center top;
+            -webkit-mask-position: center top;
+        }
+    }
+
+    .pd-grid-10-spacer-white {
+        position: relative;
+        z-index: 0;
+        background: white;
+        @media screen and (max-width: 575px) {
+            width: 100%;
+            height: 72px;
+        }
+
+        @media (min-width: 576px) and (max-width: 991px) {
+            width: 100%;
+            height: 120px;
+        }
+
+        @media (min-width: 992px) {
+            width: 100%;
+            height: 144px;
+        }
+    }
+}
+
 
 
 
