Added in new services section

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -6,6 +6,9 @@ $black: #231F20;
 $light: #f8f9fa;
 $dark: #343a40;
 
+// opacity faded colors
+$pd-black-alpha: rgba($black, 0.4);
+
 // heading font weights and sizes
 $headings-font-weight: 400;
 
