--- a/bootstrap_theme/vivato/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/vivato/factory_testimonial_sliders.scss
@@ -1195,7 +1195,8 @@
             img {
                 width: 100%;
                 height: auto;
-                max-width: 120px;
+                max-width: 160px;
+                // max-height: 180px;
             }
         }
     }
