Added in new homepage

--- a/bootstrap_theme/vivato/factory_logo_strips.scss
+++ b/bootstrap_theme/vivato/factory_logo_strips.scss
@@ -1,20 +1,20 @@
 .pd-logo-strip-1 {
-    border-top: 1px solid $gray-300;
-    border-bottom: 1px solid $gray-300;
-    background: $gray-100;
+    // border-top: 1px solid $gray-300;
+    // border-bottom: 1px solid $gray-300;
+    // background: $gray-100;
 
     // background: linear-gradient($gray-100 0%, $white 30%, $white 70%, $gray-100 100%);
-    h2 {
-        font-weight: 700;
-        font-size: 0.7rem;
-        color: $white;
-        display: inline-block;
-        background: $info;
-        padding: 8px 14px;
-        border-radius: 50em;
-        text-transform: uppercase;
-        letter-spacing: 0.1em;
-    }
+    // h2 {
+    //     font-weight: 700;
+    //     font-size: 0.7rem;
+    //     color: $white;
+    //     display: inline-block;
+    //     background: $info;
+    //     padding: 8px 14px;
+    //     border-radius: 50em;
+    //     text-transform: uppercase;
+    //     letter-spacing: 0.1em;
+    // }
 
     .pd-logo-strip-1-subHeadline {
         font-weight: 300;
