Added in pd-grid-6 adapted

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -45,6 +45,8 @@ $pd-block-padding-ex-sm: 30px;
 $pd-block-padding-sm: 40px;
 $pd-block-padding-lg: 60px;
 
+$pd-grid-gap-lg: 40px;
+
 // $info: #b53027;
 $pd-oxford-blue: #00182E;
 $pd-bone: #E0DDCF;
