--- a/bootstrap_theme/vivato/factory_grid.scss
+++ b/bootstrap_theme/vivato/factory_grid.scss
@@ -788,87 +788,72 @@
 // end pd-grid-5
 // start pd-grid-6
 .pd-grid-6 {
-    background: #F2F7F2;
-
-    .pd-intro-heading-sm {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        margin-bottom: 10px;
-
-        h2 {
-            font-weight: 400;
-            color: #161B33;
-            font-size: 1rem;
-
-            // letter-spacing: 0.07em;
-            margin-bottom: 0px;
-        }
-
-        span {
-            img {
-                margin-right: 3px;
-                margin-top: -3px;
-            }
-        }
-    }
-
-    .pd-headline {
-        font-weight: 800;
-        color: #161B33;
-        line-height: 1.3;
-
-        @media screen and (max-width: 991px) {
-            font-size: 1.8rem;
-            margin-botom: 20px;
-        }
-
-        @media (min-width: 992px) {
-            font-size: 3rem;
-            margin-bottom: 10px;
-        }
-    }
-
-    .pd-subHeadline {
-        line-height: 1.5;
-        font-weight: 300;
-        color: #161B33;
-        margin-bottom: 10px;
-
-        strong,
-        em {
-            font-weight: 800;
-        }
-
-        @media screen and (max-width: 991px) {
-            font-size: 0.9rem;
-        }
-
-        @media (min-width: 992px) {
-            font-size: 1rem;
-        }
-    }
-
-    .pd-btn {
-        text-decoration: none;
-        color: #161B33;
-        margin-right: 20px;
-        padding: 12px 30px;
-        border-radius: 50em;
-        border: 2px solid #DE541E;
-
-        @media screen and (max-width: 991px) {
-            margin-bottom: 16px;
-        }
-
-        img {
-            margin-right: 4px;
-            width: 24px;
-            height: 24px;
-        }
-    }
-
+    // background: #F2F7F2;
+    // .pd-intro-heading-sm {
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: flex-start;
+    // align-items: center;
+    // margin-bottom: 10px;
+    // h2 {
+    // font-weight: 400;
+    // color: #161B33;
+    // font-size: 1rem;
+    // // letter-spacing: 0.07em;
+    // margin-bottom: 0px;
+    // }
+    // span {
+    // img {
+    // margin-right: 3px;
+    // margin-top: -3px;
+    // }
+    // }
+    // }
+    // .pd-headline {
+    // font-weight: 800;
+    // color: #161B33;
+    // line-height: 1.3;
+    // @media screen and (max-width: 991px) {
+    // font-size: 1.8rem;
+    // margin-botom: 20px;
+    // }
+    // @media (min-width: 992px) {
+    // font-size: 3rem;
+    // margin-bottom: 10px;
+    // }
+    // }
+    // .pd-subHeadline {
+    // line-height: 1.5;
+    // font-weight: 300;
+    // color: #161B33;
+    // margin-bottom: 10px;
+    // strong,
+    // em {
+    // font-weight: 800;
+    // }
+    // @media screen and (max-width: 991px) {
+    // font-size: 0.9rem;
+    // }
+    // @media (min-width: 992px) {
+    // font-size: 1rem;
+    // }
+    // }
+    // .pd-btn {
+    // text-decoration: none;
+    // color: #161B33;
+    // margin-right: 20px;
+    // padding: 12px 30px;
+    // border-radius: 50em;
+    // border: 2px solid #DE541E;
+    // @media screen and (max-width: 991px) {
+    // margin-bottom: 16px;
+    // }
+    // img {
+    // margin-right: 4px;
+    // width: 24px;
+    // height: 24px;
+    // }
+    // }
     .pd-grid-6-grid-outer {
         @media screen and (max-width: 575px) {
             display: block;
@@ -883,7 +868,7 @@
         @media (min-width: 992px) {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 20px;
+            gap: $pd-grid-gap-lg;
         }
 
         .pd-grid-6-grid-card {
@@ -893,7 +878,7 @@
             align-items: flex-start;
 
             @media screen and (max-width: 991px) {
-                margin-bottom: 20px;
+                margin-bottom: $pd-grid-gap-lg;
             }
 
             // anchor tag
@@ -902,6 +887,7 @@
                 width: 100%;
                 overflow: hidden;
                 position: relative;
+                border-radius: $pd-border-radius-sm;
 
                 @media screen and (max-width: 991px) {
                     min-height: 280px;
@@ -909,8 +895,8 @@
                 }
 
                 @media (min-width: 992px) {
-                    min-height: 220px;
-                    height: 220px;
+                    min-height: 240px;
+                    height: 240px;
                 }
 
                 img {
@@ -919,52 +905,64 @@
                     object-fit: cover;
                     object-position: center center;
                     position: absolute;
+                    border-radius: $pd-border-radius-sm;
+                    transition: transform $pd-transition-speed ease;
+                }
+
+                &:hover {
+                    img {
+                        transform: scale(1.1);
+                    }
                 }
             }
 
             .pd-grid-6-grid-card-content {
-                flex: 0 0 auto;
+                display: flex;
+                flex-direction: column;
+                flex: 1 0 auto;
                 width: 100%;
 
                 @media screen and (max-width: 991px) {
-                    padding: 10px;
+                    padding: 0px 10px;
                 }
 
                 @media (min-width: 992px) {
-                    padding: 10px 0px 0px 0px;
+                    padding: 0px 10px;
                 }
 
                 h3 {
-                    color: #161B33;
-                    font-weight: 800;
-                    font-size: 1.2rem;
-                    margin-bottom: 10px;
+                    color: $primary;
+                    font-weight: $pd-font-weight-heavy;
+                    font-size: $pd-font-md;
+
+                    // margin-bottom: 10px;
                 }
 
                 p {
-                    font-weight: 300;
-                    color: #161B33;
-                    margin-bottom: 10px;
+                    font-weight: $pd-font-weight-light;
+                    color: $primary;
+
+                    // margin-bottom: 10px;
                 }
 
-                a {
-                    text-decoration: none;
-                    color: #161B33;
-                    font-weight: 800;
-
-                    &:before {
-                        content: ">";
-                        color: #DE541E;
-                        margin-right: 4px;
-                    }
-                }
+                // a {
+                // text-decoration: none;
+                // color: #161B33;
+                // font-weight: 800;
+                // &:before {
+                // content: ">";
+                // color: #DE541E;
+                // margin-right: 4px;
+                // }
+                // }
             }
         }
     }
 
     .pd-grid-6-list-outer {
-        @media screen and (max-width: 991px) {
-        }
+        position: relative;
+        // @media screen and (max-width: 991px) {
+        // }
 
         @media (min-width: 992px) {
             display: grid;
@@ -983,20 +981,22 @@
             @media (min-width: 992px) {
             }
 
-            img {
+            img,
+            svg {
                 margin-right: 10px;
                 width: 16px;
                 height: 16px;
+                fill: $white;
             }
 
             p {
                 margin-bottom: 0px;
-                color: #161B33;
-                font-weight: 300;
+                color: $white;
+                font-weight: $pd-font-weight-light;
 
                 em,
                 strong {
-                    font-weight: 800;
+                    font-weight: $pd-font-weight-heavy;
                     font-style: normal;
                 }
 
