--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -160,7 +160,7 @@
         width: 20px;
         height: 20px;
         fill: $white;
-        margin-right: 8px;
+        margin-left: 8px;
     }
 
     &:hover {
@@ -600,7 +600,7 @@
 // *******************
 .pd-number-svg-lg {
     position: absolute;
-    bottom: $pd-block-padding-lg;
+    bottom: 20px;
     right: 20px;
     z-index: 0;
 
