--- a/bootstrap_theme/vivato/factory_mega_menu_nav.scss
+++ b/bootstrap_theme/vivato/factory_mega_menu_nav.scss
@@ -208,7 +208,7 @@ $pd-mega-menu-border-color: $secondary;
 
         .pd-icon {
             fill: white;
-            margin-right: 8px;
+            margin-left: 8px;
             width: 20px;
             height: 20px;
         }
