--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -44,8 +44,8 @@ $pd-border-radius-sm: 20px;
 $pd-block-padding-ex-sm: 30px;
 $pd-block-padding-sm: 40px;
 $pd-block-padding-lg: 60px;
-
 $pd-grid-gap-lg: 40px;
+$pd-grid-gap-sm: 20px;
 
 // $info: #b53027;
 $pd-oxford-blue: #00182E;
